syntax = "proto2";
message TestAllTypes {
  optional int32 single_int32 = 1;
  optional int64 single_int64 = 2;
  optional uint32 single_uint32 = 3;
  optional uint64 single_uint64 = 4;
  optional sint32 single_sint32 = 5;
  optional sint64 single_sint64 = 6;
  optional fixed32 single_fixed32 = 7;
  optional fixed64 single_fixed64 = 8;
  optional sfixed32 single_sfixed32 = 9;
  optional sfixed64 single_sfixed64 = 10;
  optional float single_float = 11;
  optional double single_double = 12;
  optional bool single_bool = 13;
  optional string single_string = 14;
  optional bytes single_bytes = 15;
  optional Inline_google_protobuf_Any single_any = 100;
  optional Inline_google_protobuf_Duration single_duration = 101;
  optional Inline_google_protobuf_Timestamp single_timestamp = 102;
  optional Inline_google_protobuf_Struct single_struct = 103;
  optional Inline_google_protobuf_Value single_value = 104;
  optional Inline_google_protobuf_Int64Value single_int64_wrapper = 105;
  optional Inline_google_protobuf_Int32Value single_int32_wrapper = 106;
  optional Inline_google_protobuf_DoubleValue single_double_wrapper = 107;
  optional Inline_google_protobuf_FloatValue single_float_wrapper = 108;
  optional Inline_google_protobuf_UInt64Value single_uint64_wrapper = 109;
  optional Inline_google_protobuf_UInt32Value single_uint32_wrapper = 110;
  optional Inline_google_protobuf_StringValue single_string_wrapper = 111;
  optional Inline_google_protobuf_BoolValue single_bool_wrapper = 112;
  optional Inline_google_protobuf_BytesValue single_bytes_wrapper = 113;
  optional Inline_google_protobuf_ListValue list_value = 114;
  optional int32 null_value = 115;
  optional int32 optional_null_value = 116;
  oneof nested_type {
    NestedMessage single_nested_message = 21;
    int32 single_nested_enum = 22;
  }
  optional NestedMessage standalone_message = 23;
  optional int32 standalone_enum = 24;
  repeated int32 repeated_int32 = 31;
  repeated int64 repeated_int64 = 32;
  repeated uint32 repeated_uint32 = 33;
  repeated uint64 repeated_uint64 = 34;
  repeated sint32 repeated_sint32 = 35;
  repeated sint64 repeated_sint64 = 36;
  repeated fixed32 repeated_fixed32 = 37;
  repeated fixed64 repeated_fixed64 = 38;
  repeated sfixed32 repeated_sfixed32 = 39;
  repeated sfixed64 repeated_sfixed64 = 40;
  repeated float repeated_float = 41;
  repeated double repeated_double = 42;
  repeated bool repeated_bool = 43;
  repeated string repeated_string = 44;
  repeated bytes repeated_bytes = 45;
  repeated NestedMessage repeated_nested_message = 51;
  repeated int32 repeated_nested_enum = 52;
  repeated string repeated_string_piece = 53 [ctype = STRING_PIECE];
  repeated string repeated_cord = 54 [ctype = CORD];
  repeated NestedMessage repeated_lazy_message = 55 [lazy = true];
  repeated Inline_google_protobuf_Any repeated_any = 120;
  repeated Inline_google_protobuf_Duration repeated_duration = 121;
  repeated Inline_google_protobuf_Timestamp repeated_timestamp = 122;
  repeated Inline_google_protobuf_Struct repeated_struct = 123;
  repeated Inline_google_protobuf_Value repeated_value = 124;
  repeated Inline_google_protobuf_Int64Value repeated_int64_wrapper = 125;
  repeated Inline_google_protobuf_Int32Value repeated_int32_wrapper = 126;
  repeated Inline_google_protobuf_DoubleValue repeated_double_wrapper = 127;
  repeated Inline_google_protobuf_FloatValue repeated_float_wrapper = 128;
  repeated Inline_google_protobuf_UInt64Value repeated_uint64_wrapper = 129;
  repeated Inline_google_protobuf_UInt32Value repeated_uint32_wrapper = 130;
  repeated Inline_google_protobuf_StringValue repeated_string_wrapper = 131;
  repeated Inline_google_protobuf_BoolValue repeated_bool_wrapper = 132;
  repeated Inline_google_protobuf_BytesValue repeated_bytes_wrapper = 133;
  repeated Inline_google_protobuf_ListValue repeated_list_value = 134;
  repeated int32 repeated_null_value = 135;
  map<int64, Inline_bufext_cel_expr_conformance_proto3_NestedTestAllTypes> map_int64_nested_type = 62;
  map<bool, bool> map_bool_bool = 63;
  map<bool, string> map_bool_string = 64;
  map<bool, bytes> map_bool_bytes = 65;
  map<bool, int32> map_bool_int32 = 66;
  map<bool, int64> map_bool_int64 = 67;
  map<bool, uint32> map_bool_uint32 = 68;
  map<bool, uint64> map_bool_uint64 = 69;
  map<bool, float> map_bool_float = 70;
  map<bool, double> map_bool_double = 71;
  map<bool, int32> map_bool_enum = 72;
  map<bool, NestedMessage> map_bool_message = 73;
  map<bool, Inline_google_protobuf_Duration> map_bool_duration = 228;
  map<bool, Inline_google_protobuf_Timestamp> map_bool_timestamp = 229;
  map<bool, int32> map_bool_null_value = 230;
  map<bool, Inline_google_protobuf_Any> map_bool_any = 246;
  map<bool, Inline_google_protobuf_Struct> map_bool_struct = 247;
  map<bool, Inline_google_protobuf_Value> map_bool_value = 248;
  map<bool, Inline_google_protobuf_ListValue> map_bool_list_value = 249;
  map<bool, Inline_google_protobuf_Int64Value> map_bool_int64_wrapper = 250;
  map<bool, Inline_google_protobuf_Int32Value> map_bool_int32_wrapper = 251;
  map<bool, Inline_google_protobuf_DoubleValue> map_bool_double_wrapper = 252;
  map<bool, Inline_google_protobuf_FloatValue> map_bool_float_wrapper = 253;
  map<bool, Inline_google_protobuf_UInt64Value> map_bool_uint64_wrapper = 254;
  map<bool, Inline_google_protobuf_UInt32Value> map_bool_uint32_wrapper = 255;
  map<bool, Inline_google_protobuf_StringValue> map_bool_string_wrapper = 256;
  map<bool, Inline_google_protobuf_BoolValue> map_bool_bool_wrapper = 257;
  map<bool, Inline_google_protobuf_BytesValue> map_bool_bytes_wrapper = 258;
  map<int32, bool> map_int32_bool = 74;
  map<int32, string> map_int32_string = 75;
  map<int32, bytes> map_int32_bytes = 76;
  map<int32, int32> map_int32_int32 = 77;
  map<int32, int64> map_int32_int64 = 78;
  map<int32, uint32> map_int32_uint32 = 79;
  map<int32, uint64> map_int32_uint64 = 80;
  map<int32, float> map_int32_float = 81;
  map<int32, double> map_int32_double = 82;
  map<int32, int32> map_int32_enum = 83;
  map<int32, NestedMessage> map_int32_message = 84;
  map<int32, Inline_google_protobuf_Duration> map_int32_duration = 231;
  map<int32, Inline_google_protobuf_Timestamp> map_int32_timestamp = 232;
  map<int32, int32> map_int32_null_value = 233;
  map<int32, Inline_google_protobuf_Any> map_int32_any = 259;
  map<int32, Inline_google_protobuf_Struct> map_int32_struct = 260;
  map<int32, Inline_google_protobuf_Value> map_int32_value = 261;
  map<int32, Inline_google_protobuf_ListValue> map_int32_list_value = 262;
  map<int32, Inline_google_protobuf_Int64Value> map_int32_int64_wrapper = 263;
  map<int32, Inline_google_protobuf_Int32Value> map_int32_int32_wrapper = 264;
  map<int32, Inline_google_protobuf_DoubleValue> map_int32_double_wrapper = 265;
  map<int32, Inline_google_protobuf_FloatValue> map_int32_float_wrapper = 266;
  map<int32, Inline_google_protobuf_UInt64Value> map_int32_uint64_wrapper = 267;
  map<int32, Inline_google_protobuf_UInt32Value> map_int32_uint32_wrapper = 268;
  map<int32, Inline_google_protobuf_StringValue> map_int32_string_wrapper = 269;
  map<int32, Inline_google_protobuf_BoolValue> map_int32_bool_wrapper = 270;
  map<int32, Inline_google_protobuf_BytesValue> map_int32_bytes_wrapper = 271;
  map<int64, bool> map_int64_bool = 85;
  map<int64, string> map_int64_string = 86;
  map<int64, bytes> map_int64_bytes = 87;
  map<int64, int32> map_int64_int32 = 88;
  map<int64, int64> map_int64_int64 = 89;
  map<int64, uint32> map_int64_uint32 = 90;
  map<int64, uint64> map_int64_uint64 = 91;
  map<int64, float> map_int64_float = 92;
  map<int64, double> map_int64_double = 93;
  map<int64, int32> map_int64_enum = 94;
  map<int64, NestedMessage> map_int64_message = 95;
  map<int64, Inline_google_protobuf_Duration> map_int64_duration = 234;
  map<int64, Inline_google_protobuf_Timestamp> map_int64_timestamp = 235;
  map<int64, int32> map_int64_null_value = 236;
  map<int64, Inline_google_protobuf_Any> map_int64_any = 272;
  map<int64, Inline_google_protobuf_Struct> map_int64_struct = 273;
  map<int64, Inline_google_protobuf_Value> map_int64_value = 274;
  map<int64, Inline_google_protobuf_ListValue> map_int64_list_value = 275;
  map<int64, Inline_google_protobuf_Int64Value> map_int64_int64_wrapper = 276;
  map<int64, Inline_google_protobuf_Int32Value> map_int64_int32_wrapper = 277;
  map<int64, Inline_google_protobuf_DoubleValue> map_int64_double_wrapper = 278;
  map<int64, Inline_google_protobuf_FloatValue> map_int64_float_wrapper = 279;
  map<int64, Inline_google_protobuf_UInt64Value> map_int64_uint64_wrapper = 280;
  map<int64, Inline_google_protobuf_UInt32Value> map_int64_uint32_wrapper = 281;
  map<int64, Inline_google_protobuf_StringValue> map_int64_string_wrapper = 282;
  map<int64, Inline_google_protobuf_BoolValue> map_int64_bool_wrapper = 283;
  map<int64, Inline_google_protobuf_BytesValue> map_int64_bytes_wrapper = 284;
  map<uint32, bool> map_uint32_bool = 96;
  map<uint32, string> map_uint32_string = 97;
  map<uint32, bytes> map_uint32_bytes = 98;
  map<uint32, int32> map_uint32_int32 = 99;
  map<uint32, int64> map_uint32_int64 = 200;
  map<uint32, uint32> map_uint32_uint32 = 201;
  map<uint32, uint64> map_uint32_uint64 = 202;
  map<uint32, float> map_uint32_float = 203;
  map<uint32, double> map_uint32_double = 204;
  map<uint32, int32> map_uint32_enum = 205;
  map<uint32, NestedMessage> map_uint32_message = 206;
  map<uint32, Inline_google_protobuf_Duration> map_uint32_duration = 237;
  map<uint32, Inline_google_protobuf_Timestamp> map_uint32_timestamp = 238;
  map<uint32, int32> map_uint32_null_value = 239;
  map<uint32, Inline_google_protobuf_Any> map_uint32_any = 285;
  map<uint32, Inline_google_protobuf_Struct> map_uint32_struct = 286;
  map<uint32, Inline_google_protobuf_Value> map_uint32_value = 287;
  map<uint32, Inline_google_protobuf_ListValue> map_uint32_list_value = 288;
  map<uint32, Inline_google_protobuf_Int64Value> map_uint32_int64_wrapper = 289;
  map<uint32, Inline_google_protobuf_Int32Value> map_uint32_int32_wrapper = 290;
  map<uint32, Inline_google_protobuf_DoubleValue> map_uint32_double_wrapper = 291;
  map<uint32, Inline_google_protobuf_FloatValue> map_uint32_float_wrapper = 292;
  map<uint32, Inline_google_protobuf_UInt64Value> map_uint32_uint64_wrapper = 293;
  map<uint32, Inline_google_protobuf_UInt32Value> map_uint32_uint32_wrapper = 294;
  map<uint32, Inline_google_protobuf_StringValue> map_uint32_string_wrapper = 295;
  map<uint32, Inline_google_protobuf_BoolValue> map_uint32_bool_wrapper = 296;
  map<uint32, Inline_google_protobuf_BytesValue> map_uint32_bytes_wrapper = 297;
  map<uint64, bool> map_uint64_bool = 207;
  map<uint64, string> map_uint64_string = 208;
  map<uint64, bytes> map_uint64_bytes = 209;
  map<uint64, int32> map_uint64_int32 = 210;
  map<uint64, int64> map_uint64_int64 = 211;
  map<uint64, uint32> map_uint64_uint32 = 212;
  map<uint64, uint64> map_uint64_uint64 = 213;
  map<uint64, float> map_uint64_float = 214;
  map<uint64, double> map_uint64_double = 215;
  map<uint64, int32> map_uint64_enum = 216;
  map<uint64, NestedMessage> map_uint64_message = 217;
  map<uint64, Inline_google_protobuf_Duration> map_uint64_duration = 240;
  map<uint64, Inline_google_protobuf_Timestamp> map_uint64_timestamp = 241;
  map<uint64, int32> map_uint64_null_value = 242;
  map<uint64, Inline_google_protobuf_Any> map_uint64_any = 298;
  map<uint64, Inline_google_protobuf_Struct> map_uint64_struct = 299;
  map<uint64, Inline_google_protobuf_Value> map_uint64_value = 300;
  map<uint64, Inline_google_protobuf_ListValue> map_uint64_list_value = 301;
  map<uint64, Inline_google_protobuf_Int64Value> map_uint64_int64_wrapper = 302;
  map<uint64, Inline_google_protobuf_Int32Value> map_uint64_int32_wrapper = 303;
  map<uint64, Inline_google_protobuf_DoubleValue> map_uint64_double_wrapper = 304;
  map<uint64, Inline_google_protobuf_FloatValue> map_uint64_float_wrapper = 305;
  map<uint64, Inline_google_protobuf_UInt64Value> map_uint64_uint64_wrapper = 306;
  map<uint64, Inline_google_protobuf_UInt32Value> map_uint64_uint32_wrapper = 307;
  map<uint64, Inline_google_protobuf_StringValue> map_uint64_string_wrapper = 308;
  map<uint64, Inline_google_protobuf_BoolValue> map_uint64_bool_wrapper = 309;
  map<uint64, Inline_google_protobuf_BytesValue> map_uint64_bytes_wrapper = 310;
  map<string, bool> map_string_bool = 218;
  map<string, string> map_string_string = 61;
  map<string, bytes> map_string_bytes = 219;
  map<string, int32> map_string_int32 = 220;
  map<string, int64> map_string_int64 = 221;
  map<string, uint32> map_string_uint32 = 222;
  map<string, uint64> map_string_uint64 = 223;
  map<string, float> map_string_float = 224;
  map<string, double> map_string_double = 225;
  map<string, int32> map_string_enum = 226;
  map<string, NestedMessage> map_string_message = 227;
  map<string, Inline_google_protobuf_Duration> map_string_duration = 243;
  map<string, Inline_google_protobuf_Timestamp> map_string_timestamp = 244;
  map<string, int32> map_string_null_value = 245;
  map<string, Inline_google_protobuf_Any> map_string_any = 311;
  map<string, Inline_google_protobuf_Struct> map_string_struct = 312;
  map<string, Inline_google_protobuf_Value> map_string_value = 313;
  map<string, Inline_google_protobuf_ListValue> map_string_list_value = 314;
  map<string, Inline_google_protobuf_Int64Value> map_string_int64_wrapper = 315;
  map<string, Inline_google_protobuf_Int32Value> map_string_int32_wrapper = 316;
  map<string, Inline_google_protobuf_DoubleValue> map_string_double_wrapper = 317;
  map<string, Inline_google_protobuf_FloatValue> map_string_float_wrapper = 318;
  map<string, Inline_google_protobuf_UInt64Value> map_string_uint64_wrapper = 319;
  map<string, Inline_google_protobuf_UInt32Value> map_string_uint32_wrapper = 320;
  map<string, Inline_google_protobuf_StringValue> map_string_string_wrapper = 321;
  map<string, Inline_google_protobuf_BoolValue> map_string_bool_wrapper = 322;
  map<string, Inline_google_protobuf_BytesValue> map_string_bytes_wrapper = 323;
  message NestedMessage {
    optional int32 bb = 1;
  }
  message Inline_bufext_cel_expr_conformance_proto3_NestedTestAllTypes {
    optional Inline_bufext_cel_expr_conformance_proto3_NestedTestAllTypes child = 1;
    optional TestAllTypes payload = 2;
  }
  message Inline_google_protobuf_Duration {
    optional int64 seconds = 1;
    optional int32 nanos = 2;
  }
  message Inline_google_protobuf_Timestamp {
    optional int64 seconds = 1;
    optional int32 nanos = 2;
  }
  message Inline_google_protobuf_Any {
    optional string type_url = 1;
    optional bytes value = 2;
  }
  message Inline_google_protobuf_ListValue {
    repeated Inline_google_protobuf_Value values = 1;
  }
  message Inline_google_protobuf_Value {
    oneof kind {
      int32 null_value = 1;
      double number_value = 2;
      string string_value = 3;
      bool bool_value = 4;
      Inline_google_protobuf_Struct struct_value = 5;
      Inline_google_protobuf_ListValue list_value = 6;
    }
  }
  message Inline_google_protobuf_Struct {
    map<string, Inline_google_protobuf_Value> fields = 1;
  }
  message Inline_google_protobuf_Int64Value {
    optional int64 value = 1;
  }
  message Inline_google_protobuf_Int32Value {
    optional int32 value = 1;
  }
  message Inline_google_protobuf_DoubleValue {
    optional double value = 1;
  }
  message Inline_google_protobuf_FloatValue {
    optional float value = 1;
  }
  message Inline_google_protobuf_UInt64Value {
    optional uint64 value = 1;
  }
  message Inline_google_protobuf_UInt32Value {
    optional uint32 value = 1;
  }
  message Inline_google_protobuf_StringValue {
    optional string value = 1;
  }
  message Inline_google_protobuf_BoolValue {
    optional bool value = 1;
  }
  message Inline_google_protobuf_BytesValue {
    optional bytes value = 1;
  }
  enum NestedEnum {
    FOO = 0;
    BAR = 1;
    BAZ = 2;
  }
}
