// Copyright 2024 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.schema;

import "buf/validate/validate.proto";
import "google/protobuf/descriptor.proto";

option java_multiple_files = true;
option java_outer_classname = "SchemaProto";
option java_package = "build.buf.protoschema.v1";

extend google.protobuf.FieldOptions {
  FieldSchema field = 1162;
}

message FieldSchema {
  // Additional names for the field.
  repeated string alias = 1 [(buf.validate.field).repeated.items.string.pattern = "^[a-zA-Z_][a-zA-Z0-9_]*$"];

  // Aditional json names for the field.
  //
  // If empty, automatically generated from `alias`.
  repeated string alias_json = 2;
}
